Fix overflow issue for add-motorcycle.css

--- a/src/stylesheets/add-motorcycle.css
+++ b/src/stylesheets/add-motorcycle.css
@@ -4,7 +4,7 @@
   padding: 10px;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  overflow-y: hidden;
+  background-color: #fff;
 }
 
 #add-form input {
@@ -20,6 +20,28 @@
 
 #add-form input::placeholder {
   color: #96bf0fe1;
+}
+
+.add-motor-main-container {
+  overflow: hidden;
+}
+
+.add-motor-body {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+  padding: 1rem;
+  min-height: calc(100vh - 56px);
+  background-image: linear-gradient(0deg, #96bf0fe1, #96bf0fe1),
+    url(/src/images/bmw-e-power-bike.png);
+  color: white;
+  background-position: center;
+  background-size: cover;
+}
+
+.form-container {
+  margin-top: 50px;
 }
 
 textarea {
@@ -54,15 +76,17 @@ textarea::placeholder {
 
   .add-motor-body {
     width: 100%;
+    padding: 1rem;
     min-height: 100vh;
   }
 
   .form-container {
-    height: 100vh;
+    height: 90vh;
   }
 
   #add-form {
     width: 70%;
     max-width: 600px;
+    background-color: #fff;
   }
 }
